--- a/style.css
+++ b/style.css
@@ -9,3 +9,98 @@ html, body {
 	align-items: center;
 	flex-direction: column;
 }
+
+img {
+	width: 150px;
+}
+#home{
+	width: 100%;
+	height:100vh;	
+	display:flex;
+	justify-content: center;
+	align-items: flex-start;
+}
+#home nav {
+	width: 100%;
+	position: fixed;
+	top: 0;
+	display: flex;
+	justify-content: center;
+
+}
+#home nav ul{
+	display:flex;
+	list-style: none;
+	padding-left: 0;
+
+}
+#home nav ul li{
+	font-size: 0.9em;
+	color: #00416d;
+	font-style: normal;
+	text-align: center;
+	line-height: 0.8em;
+	border: solid 1px #888;
+	border-radius: 20px;
+	margin: 0 2.5%;
+	background: #fff;
+	width: 150px;
+	padding: 5px 0;
+}
+#home img{
+	width: 40%;
+	margin-top:166px;
+}
+#home div {
+	position: relative;
+	top:220px;
+	right: -10px;
+	width: 23%;
+}
+#home div p{
+	color: #95989a;
+	font-style: normal;
+	text-align: left;
+	line-height: 0.8em;
+	letter-spacing:0;
+}
+#sobre{
+	font-size:1.88;
+	color:#95989a;
+	font-style:normal;
+	text-align:left;
+	line-height:1.61;
+	letter-spacing:0;
+}
+#sobre div{
+	width:40%;
+	background: #fff;
+	margin-right: 50px;
+	margin-bottom: 20px;
+	padding: 30px;
+	border-radius: 10px; 
+}
+#sobre div h2{
+	margin: 0px;
+	font-size: 1.88em;
+	color: #95989a;
+	font-style: normal;
+	text-align: left;
+	line-height: 1.68em;
+	letter-spacing: 0em;
+}
+#sobre div p{
+	color: #95989a;
+	font-style: normal;
+	text-align: left;
+	line-height: 1.61em;
+	letter-spacing: 0em;
+}
+#açoes{
+	font-size: 1.88em;
+	color:#95989a
+	font-style:normal;
+	text-align: left;
+	line-height: 1.61em;
+	letter-spacing: 0em;
+}
