Configuração da Sobre1

--- a/style.css
+++ b/style.css
@@ -74,7 +74,11 @@ img {
 	line-height: 1.5em;
 	letter-spacing:0;
 }
+
 #sobre{
+	width: 100%;
+	background-image: url('Assets/DSC01680.JPG');
+	background-size: 100%;
 	font-size:1.88;
 	color:#95989a;
 	font-style:normal;
@@ -83,34 +87,75 @@ img {
 	letter-spacing:0;
 }
 #sobre div{
-	width:40%;
+	width:30%;
+	left: 50%;
 	background: #fff;
-	margin-right: 50px;
-	margin-bottom: 20px;
+	/*display: flex;
+	flex-direction: column;*/
+	/*justify-content: flex-end;*/
+	/*margin-right: 50px;
+	margin-bottom: 20px;*/
 	padding: 30px;
 	border-radius: 10px; 
 }
-#sobre div h2{
-	margin: 0px;
+#sobre div h1{
+	margin: 0 38 0 24;
 	font-size: 1.88em;
-	color: #95989a;
-	font-style: normal;
-	text-align: left;
-	line-height: 1.68em;
-	letter-spacing: 0em;
-}
-#sobre div p{
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 600;
 	color: #95989a;
 	font-style: normal;
 	text-align: left;
 	line-height: 1.61em;
 	letter-spacing: 0em;
 }
-#açoes{
+#sobre div p{
+	width:100%;
+	color: #95989a;
+	font-size: 0.88em;
+	font-style: normal;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 400;
+	text-align: left;
+	line-height: 0.75em;
+	letter-spacing: 0em;
+}
+
+section h2{
+	color: #95989a;
 	font-size: 1.88em;
-	color:#95989a
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 700;
 	font-style:normal;
 	text-align: left;
 	line-height: 1.61em;
 	letter-spacing: 0em;
 }
+
+section h3{
+	color: #95989a;
+	font-size: 1.56em;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 600;
+	font-style:normal;
+	text-align: left;
+	line-height: 1.34em;
+	letter-spacing: 0em;
+}
+
+#acoes {
+	background-color: blue;
+}
+
+#acoes p {
+	color: #95989a;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	text-align: left;
+	line-height: 1.5em;
+	letter-spacing: 0;
+}
+
+
+
