--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 
 *, *:before, *:after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 	position: relative;
 }
 
@@ -10,6 +10,8 @@ html, body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	margin: 0;
+	padding: 0;
 }
 
 img {
@@ -29,7 +31,7 @@ img {
 	top: 0;
 	display: flex;
 	justify-content: center;
-
+	z-index: 1;
 }
 #home nav ul{
 	display:flex;
@@ -77,6 +79,7 @@ img {
 
 #sobre{
 	width: 100%;
+	height: 800px;
 	background-image: url('Assets/DSC01680.JPG');
 	background-size: 100%;
 	font-size:1.88;
@@ -87,16 +90,18 @@ img {
 	letter-spacing:0;
 }
 #sobre div{
-	width:30%;
+	width:38%;
+	top:100px;
 	left: 50%;
 	background: #fff;
-	/*display: flex;
-	flex-direction: column;*/
-	/*justify-content: flex-end;*/
-	/*margin-right: 50px;
-	margin-bottom: 20px;*/
-	padding: 30px;
-	border-radius: 10px; 
+	padding: 34.17px;
+	border-radius: 10px;
+	font-size: 1em;
+	color: #95989a;
+	font-style: normal;
+	text-align: left;
+	line-height: 1.61em;
+	letter-spacing: 0em; 
 }
 #sobre div h1{
 	margin: 0 38 0 24;
@@ -144,18 +149,36 @@ section h3{
 }
 
 #acoes {
-	background-color: blue;
+	background-size: 100%;
+	background-color: white;
+	font-size: 1.56em;
+	color: #95989a;
+	font-style: normal;
+	text-align: left;
+	line-height: 1.61em;
+	letter-spacing: 0em;
+}
+#açoes div{
+	width:38%;
+	top:100px;
+	left: 50%;
+	background: #fff;
+	padding: 34.17px;
+	border-radius: 10px;
+	font-size: 1em;
+	color: #95989a;
+	font-style: normal;
+	text-align: left;
+	line-height: 1.61em;
+	letter-spacing: 0em;
 }
 
 #acoes p {
-	color: #95989a;
+	/*color: #95989a;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	text-align: left;
 	line-height: 1.5em;
-	letter-spacing: 0;
+	letter-spacing: 0;*/
 }
-
-
-
