--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@media(max-width: 640px){
+
+}
+
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700');
 
 *, *:before, *:after {
   box-sizing: border-box;
@@ -90,43 +94,37 @@ img {
 	letter-spacing:0;
 }
 #sobre div{
-	width:38%;
+	width:40%;
 	top:100px;
-	left: 50%;
+	left: 55%;
+	padding: 15px 60px 40px 60px;
 	background: #fff;
-	padding: 34.17px;
-	border-radius: 10px;
-	font-size: 1em;
-	color: #95989a;
-	font-style: normal;
-	text-align: left;
-	line-height: 1.61em;
-	letter-spacing: 0em; 
+	border-radius: 10px; 
 }
-#sobre div h1{
-	margin: 0 38 0 24;
-	font-size: 1.88em;
+#sobre div h2{
+	margin-bottom: 10px;
+	font-size: 2.2em;
 	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 600;
+	font-weight: 700;
 	color: #95989a;
 	font-style: normal;
 	text-align: left;
-	line-height: 1.61em;
-	letter-spacing: 0em;
 }
 #sobre div p{
-	width:100%;
+	width:100%
 	color: #95989a;
-	font-size: 0.88em;
+	margin-bottom: 5px;
+	padding: 0;
+	font-size: 1em;
 	font-style: normal;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 400;
 	text-align: left;
-	line-height: 0.75em;
+	line-height: 1.44em;
 	letter-spacing: 0em;
 }
 
-section h2{
+section h3{
 	color: #95989a;
 	font-size: 1.88em;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -137,7 +135,7 @@ section h2{
 	letter-spacing: 0em;
 }
 
-section h3{
+section h4{
 	color: #95989a;
 	font-size: 1.56em;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -149,17 +147,38 @@ section h3{
 }
 
 #acoes {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+#acoes h2 {
+	width: 100%;
+}
+
+#acoes div {
+	width: 40%;
+	background-color: red;
+}
+
+#acoes .div1 {
+	width:100%;
+	background-color: green;
+}
+
+/*#acoes {*/
+/*	width: 100%;
+	height: 800px;
+	background-image: url('Assets/DSC01680.JPG');
 	background-size: 100%;
-	background-color: white;
 	font-size: 1.56em;
 	color: #95989a;
 	font-style: normal;
 	text-align: left;
 	line-height: 1.61em;
 	letter-spacing: 0em;
-}
-#açoes div{
-	width:38%;
+}*/
+
+	/*width:38%;
 	top:100px;
 	left: 50%;
 	background: #fff;
@@ -172,13 +191,19 @@ section h3{
 	line-height: 1.61em;
 	letter-spacing: 0em;
 }
-
 #acoes p {
-	/*color: #95989a;
+	color: #95989a;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	text-align: left;
 	line-height: 1.5em;
-	letter-spacing: 0;*/
+	letter-spacing: 0;
 }
+
+#contato {
+	width: 100%;
+	height: 800px;
+	background-image: url('Assets/DSC01680.JPG');
+	background-size: 100%;
+}*/
