--- a/style.css
+++ b/style.css
@@ -19,20 +19,23 @@ img {
 
 /*-----------------------Configurações da "nav" - Menu-----------------------*/
 
-nav ul {
+nav {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
+nav ul {
 	/*Seletores de Posicionamento do Menu*/
 	position: fixed;
 	top: 2%;
-	left: 15%;
-	right: 15%;
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	z-index: 1;
 }	
 
 nav ul li {
-
 	/*Seletores de Estilo do Menu*/
 	background: #fff;
 	width: 150px;
@@ -61,8 +64,9 @@ nav ul li {
 	}
 
 	nav ul li {
-		padding: 0.5% 5%;
-		margin: 2.5%;
+		width: 75px;
+		padding: 0.25% 0.25%;
+		margin: 0.5%;
 	}
 }
 
@@ -70,21 +74,21 @@ nav ul li {
 
 .home-section {
 	min-height: 100vh;
-	top: 250px; 
-	/* Infelizmente não foi possível atender à comfiguração de 166px*/ 
-	left: 700px;
+	width: 70%;
+	margin: 0 auto;
 	display: flex;
 	flex-direction: row;
-	align-items: flex-start;
+	align-items: center;
+	padding-left: 15%;
 }
 
 .home-section img {
-	width: 29%;
+	width: 60%;
+	margin: 0 auto;
+	padding-right: 5%;
 }
 
 .home-section p {
-	width: 23%;
-	margin: 1.46%;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 400;
 	font-size: 0.94 em;
@@ -99,23 +103,24 @@ nav ul li {
 
 	/*Responsivo da Secti 1 - Home - para Mobiles*/
 
-.home-section {
-	top: 101px; 
-	/* Infelizmente não foi possível atender à comfiguração de 166px*/ 
-	left: 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	.home-section {
+		top: 0; 
+		left: 0;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		padding: 0;
+		width: 95%;
 	}
 
-.home-section img {
-	width: 75%;
+	.home-section img {
+		width: 75%;
+		margin-top: 20%;
 	}
 
-.home-section p {
-	top: 38px;
-	width: 90%;
-	margin: 20px;
+	.home-section p {
+		width: 90%;
+		margin: 20px;
 	}
 }
 
@@ -128,19 +133,32 @@ nav ul li {
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
-	}
+}
+
+	@media(max-width: 640px){
+ 		#sobre {
+ 			justify-content: center;
+ 		}
+ 	}
 	
 #sobre div {
 	background-color: #fff;
-	width: 700px;
-	right: 50px;
-	height: 500px;
+	width: 45%;
 	border-radius: 30px;
 	top: 5px;
-
+	padding-bottom: 25px;
+	margin: 0 2%;
 }
+
+	@media(max-width: 640px){
+ 		#sobre div {
+ 			width: 95%;
+ 			margin: 5% 2%;
+ 		}
+ 	}
+
 #sobre h2 {
-	margin: 40px 40px 10px 40px;
+	margin: 25px 20px 10px 20px;
 	font-weight: 700;
 	font-size: 1.88em;
     font-family: 'Source Sans Pro', sans-serif;
@@ -151,7 +169,7 @@ nav ul li {
 	letter-spacing: 0em;
 }
 #sobre p {
-	margin: 10px 40px 40px 40px;
+	margin: 20px 20px 20px 20px;
 	font-weight: 400;
 	font-size: 0.97em;
     font-family: 'Source Sans Pro', sans-serif;
@@ -168,11 +186,13 @@ nav ul li {
 	justify-content: center;
 	align-items: flex-start;
 	flex-flow: row wrap;
+	width: 80%;
+	margin: 0 auto;
 }
 /*Ações Div1*/
 
 #acoes h2{
-	width: 80%;
+	width: 85%;
 	margin-top: 100px;
 	font-size: 1.88em;
     font-family: 'Source Sans Pro', sans-serif;
@@ -193,6 +213,8 @@ nav ul li {
 	text-align: left;
 	line-height: 1.34em;
 	letter-spacing: 0em;
+	margin: 0;
+	margin-top: 2%;
 }
 #acoes p {
 	font-size: 0.97em;
@@ -203,40 +225,80 @@ nav ul li {
 	text-align: left;
 	line-height: 1em;
 	letter-spacing: 0em;
+	margin: 2% 0;
 }
 #acoes div {
-	width: 37%;
+	width: 50%;
 	display: flex;
 	flex-direction: column;
 
 }
 #acoes .acoes-div1 {
-	width: 80%;	
+	width: 85%;	
 	height: 650px;
 	flex-flow: column wrap;
 }
 #acoes .acoes-div1 p{
-	width: 30%;
+	width: 35%;
 }
 #acoes .acoes-div1 img {
 	width: 60%;
 }
 
+#acoes .acoes-div2 {
+	padding-bottom: 10%;
+}
+
 #acoes .acoes-div2 p {
-	width: 70%;
+	width: 90%;
 }
 
 #acoes .acoes-div3 p {
-	width: 70%;
+	width: 90%;
 }
 
 #acoes .acoes-div3 img {
-	width: 70%;
+	width: 80%;
 }
 
 #acoes .acoes-div2 video {
 	width: 95%;
 }
+
+@media(max-width: 640px){
+
+	#acoes {
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+	#acoes h2 {
+    	margin: 0;
+    	margin-top: 25px;
+	}
+
+	#acoes .acoes-div1 {
+		height: auto;	
+	}
+	#acoes div {
+		width: 90%;
+		margin: 0 auto;
+	}
+	#acoes h2,
+	#acoes .acoes-div1,
+	#acoes .acoes-div2,
+	#acoes .acoes-div3 {
+		width: 100%;
+	}
+	#acoes .acoes-div1 p,
+	#acoes .acoes-div2 p,
+	#acoes .acoes-div3 p {
+		width: 100%;
+		margin: 0 auto;
+		padding-bottom: 5%;
+	}
+}
+
 
 /*-----------------------Configurações do "footer" - Contato-----------------------*/
 
@@ -251,7 +313,7 @@ nav ul li {
 	background-color: #fff;
 	width: 34.19%;
 	height: 34.19%;
-	padding: 42px 42px 42px 50px;
+	padding: 22px 22px 22px 22px;
 	border-radius: 30px;
 	top: 247px;
 	right: 70px;
@@ -336,6 +398,18 @@ nav ul li {
 	text-align: left;	
 }
 
-
-
-/*Configurações da SubDiv 2*/
+@media(max-width: 640px){
+	#contato {
+		justify-content: center;
+		align-items: center;
+	}
+	.contato-div1 {
+		background-color: #fff;
+		width: 90%;
+		height: auto;
+		position: static;
+	}
+	#contato .contato-div1-sub1 {
+		width: 50%;
+	}
+}
