--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
  	position: relative;
 }
 
- body {
+body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
@@ -55,14 +55,10 @@ nav ul li {
 }
 
 @media(max-width: 640px){
-
-	/*Responsivo do Menu - para Mobiles*/
-
 	nav ul {
 		padding: 0;
 		margin: 0;
 	}
-
 	nav ul li {
 		width: 75px;
 		padding: 0.25% 0.25%;
@@ -100,9 +96,6 @@ nav ul li {
 }
 
 @media(max-width: 640px){
-
-	/*Responsivo da Secti 1 - Home - para Mobiles*/
-
 	.home-section {
 		top: 0; 
 		left: 0;
@@ -135,11 +128,11 @@ nav ul li {
 	justify-content: flex-end;
 }
 
-	@media(max-width: 640px){
- 		#sobre {
- 			justify-content: center;
- 		}
- 	}
+@media(max-width: 640px){
+	#sobre {
+		justify-content: center;
+	}
+}
 	
 #sobre div {
 	background-color: #fff;
@@ -150,12 +143,12 @@ nav ul li {
 	margin: 0 2%;
 }
 
-	@media(max-width: 640px){
- 		#sobre div {
- 			width: 95%;
- 			margin: 5% 2%;
- 		}
- 	}
+@media(max-width: 640px){
+	#sobre div {
+		width: 95%;
+		margin: 5% 2%;
+	}
+}
 
 #sobre h2 {
 	margin: 25px 20px 10px 20px;
@@ -186,13 +179,12 @@ nav ul li {
 	justify-content: center;
 	align-items: flex-start;
 	flex-flow: row wrap;
-	width: 80%;
 	margin: 0 auto;
 }
 /*Ações Div1*/
 
 #acoes h2{
-	width: 85%;
+	width: 80%;
 	margin-top: 100px;
 	font-size: 1.88em;
     font-family: 'Source Sans Pro', sans-serif;
@@ -204,10 +196,10 @@ nav ul li {
 	letter-spacing: 0em;
 }
 
-#acoes h3{
-	font-weight: 600;
+.acoes-div-titulo{
 	font-size: 1.56em;
     font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 600;
 	color: #95989a;
 	font-style: normal;
 	text-align: left;
@@ -216,6 +208,20 @@ nav ul li {
 	margin: 0;
 	margin-top: 2%;
 }
+.acoes-div-titulo-mobile{
+	display: none;
+	font-size: 1.56em;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 600;
+	color: #95989a;
+	font-style: normal;
+	text-align: left;
+	line-height: 1.34em;
+	letter-spacing: 0em;
+	margin: 0;
+	margin-top: 2%;
+}
+
 #acoes p {
 	font-size: 0.97em;
     font-family: 'Source Sans Pro', sans-serif;
@@ -228,21 +234,37 @@ nav ul li {
 	margin: 2% 0;
 }
 #acoes div {
-	width: 50%;
+	width: 35%;
+	margin: 0 1.3%;
 	display: flex;
 	flex-direction: column;
-
 }
 #acoes .acoes-div1 {
-	width: 85%;	
-	height: 650px;
+	width: 80%;	
+	height: 500px;
+	display: flex;
 	flex-flow: column wrap;
 }
 #acoes .acoes-div1 p{
 	width: 35%;
 }
 #acoes .acoes-div1 img {
-	width: 60%;
+	width: 65%;
+}
+.img-mobile{
+	display: none;
+}
+@media(max-width: 640px){
+	#acoes .acoes-div1 img {
+		width: 100%;
+	}
+	.img-desktop{
+		display: none;
+	}
+	.img-mobile{
+		display: block;
+		margin-bottom: 10px;
+	}
 }
 
 #acoes .acoes-div2 {
@@ -258,11 +280,18 @@ nav ul li {
 }
 
 #acoes .acoes-div3 img {
-	width: 80%;
+	width: 86.5%;
+	margin-bottom: 40px;
+}
+@media(max-width: 640px){
+	#acoes .acoes-div3 img {
+		width: 100%;
+	}	
 }
 
 #acoes .acoes-div2 video {
-	width: 95%;
+	width: 100%;
+	margin-bottom: 40px;
 }
 
 @media(max-width: 640px){
@@ -284,16 +313,27 @@ nav ul li {
 		width: 90%;
 		margin: 0 auto;
 	}
-	#acoes h2,
+	#acoes h2{
+		width: 90%;
+		margin: 0 auto;
+	}
 	#acoes .acoes-div1,
 	#acoes .acoes-div2,
 	#acoes .acoes-div3 {
 		width: 100%;
 	}
+	.acoes-div-titulo{
+		display: none;
+	}
+	.acoes-div-titulo-mobile{
+		display: block;
+		width: 90%;
+		margin: 0 auto;
+	}
 	#acoes .acoes-div1 p,
 	#acoes .acoes-div2 p,
 	#acoes .acoes-div3 p {
-		width: 100%;
+		width: 90%;
 		margin: 0 auto;
 		padding-bottom: 5%;
 	}
