--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
  	position: relative;
 }
 
-body {
+ body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
@@ -18,24 +18,26 @@ img {
 }
 
 /*-----------------------Configurações da "nav" - Menu-----------------------*/
-
-nav {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+header{
+	width: 100%;
 }
 
-nav ul {
-	/*Seletores de Posicionamento do Menu*/
+nav {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	position: fixed;
+	z-index: 1;
 	top: 2%;
+}
+
+nav a {
+	/*Seletores de Posicionamento do Menu*/
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	z-index: 1;
-}	
 
-nav ul li {
 	/*Seletores de Estilo do Menu*/
 	background: #fff;
 	width: 150px;
@@ -46,20 +48,20 @@ nav ul li {
 
 	/*Seletores de Estilo do Texto*/
 	list-style: none;
+	text-decoration: none;
 	text-align: center;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 400;
-	font-size: 0.94 em;
+	font-size: 0.94em;
 	color: #00416d;
 	font-style: normal;
 }
 
 @media(max-width: 640px){
-	nav ul {
-		padding: 0;
-		margin: 0;
-	}
-	nav ul li {
+
+	/*Responsivo do Menu - para Mobiles*/
+
+	nav a {
 		width: 75px;
 		padding: 0.25% 0.25%;
 		margin: 0.5%;
@@ -96,6 +98,9 @@ nav ul li {
 }
 
 @media(max-width: 640px){
+
+	/*Responsivo da Secti 1 - Home - para Mobiles*/
+
 	.home-section {
 		top: 0; 
 		left: 0;
@@ -128,11 +133,11 @@ nav ul li {
 	justify-content: flex-end;
 }
 
-@media(max-width: 640px){
-	#sobre {
-		justify-content: center;
-	}
-}
+	@media(max-width: 640px){
+ 		#sobre {
+ 			justify-content: center;
+ 		}
+ 	}
 	
 #sobre div {
 	background-color: #fff;
@@ -143,12 +148,12 @@ nav ul li {
 	margin: 0 2%;
 }
 
-@media(max-width: 640px){
-	#sobre div {
-		width: 95%;
-		margin: 5% 2%;
-	}
-}
+	@media(max-width: 640px){
+ 		#sobre div {
+ 			width: 95%;
+ 			margin: 5% 2%;
+ 		}
+ 	}
 
 #sobre h2 {
 	margin: 25px 20px 10px 20px;
@@ -179,12 +184,13 @@ nav ul li {
 	justify-content: center;
 	align-items: flex-start;
 	flex-flow: row wrap;
+	width: 80%;
 	margin: 0 auto;
 }
 /*Ações Div1*/
 
 #acoes h2{
-	width: 80%;
+	width: 85%;
 	margin-top: 100px;
 	font-size: 1.88em;
     font-family: 'Source Sans Pro', sans-serif;
@@ -196,10 +202,10 @@ nav ul li {
 	letter-spacing: 0em;
 }
 
-.acoes-div-titulo{
+#acoes h3{
+	font-weight: 600;
 	font-size: 1.56em;
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 600;
 	color: #95989a;
 	font-style: normal;
 	text-align: left;
@@ -208,20 +214,6 @@ nav ul li {
 	margin: 0;
 	margin-top: 2%;
 }
-.acoes-div-titulo-mobile{
-	display: none;
-	font-size: 1.56em;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 600;
-	color: #95989a;
-	font-style: normal;
-	text-align: left;
-	line-height: 1.34em;
-	letter-spacing: 0em;
-	margin: 0;
-	margin-top: 2%;
-}
-
 #acoes p {
 	font-size: 0.97em;
     font-family: 'Source Sans Pro', sans-serif;
@@ -234,37 +226,21 @@ nav ul li {
 	margin: 2% 0;
 }
 #acoes div {
-	width: 35%;
-	margin: 0 1.3%;
+	width: 50%;
 	display: flex;
 	flex-direction: column;
+
 }
 #acoes .acoes-div1 {
-	width: 80%;	
-	height: 500px;
-	display: flex;
+	width: 85%;	
+	height: 650px;
 	flex-flow: column wrap;
 }
 #acoes .acoes-div1 p{
 	width: 35%;
 }
 #acoes .acoes-div1 img {
-	width: 65%;
-}
-.img-mobile{
-	display: none;
-}
-@media(max-width: 640px){
-	#acoes .acoes-div1 img {
-		width: 100%;
-	}
-	.img-desktop{
-		display: none;
-	}
-	.img-mobile{
-		display: block;
-		margin-bottom: 10px;
-	}
+	width: 60%;
 }
 
 #acoes .acoes-div2 {
@@ -280,18 +256,11 @@ nav ul li {
 }
 
 #acoes .acoes-div3 img {
-	width: 86.5%;
-	margin-bottom: 40px;
-}
-@media(max-width: 640px){
-	#acoes .acoes-div3 img {
-		width: 100%;
-	}	
+	width: 80%;
 }
 
 #acoes .acoes-div2 video {
-	width: 100%;
-	margin-bottom: 40px;
+	width: 95%;
 }
 
 @media(max-width: 640px){
@@ -313,27 +282,16 @@ nav ul li {
 		width: 90%;
 		margin: 0 auto;
 	}
-	#acoes h2{
-		width: 90%;
-		margin: 0 auto;
-	}
+	#acoes h2,
 	#acoes .acoes-div1,
 	#acoes .acoes-div2,
 	#acoes .acoes-div3 {
 		width: 100%;
 	}
-	.acoes-div-titulo{
-		display: none;
-	}
-	.acoes-div-titulo-mobile{
-		display: block;
-		width: 90%;
-		margin: 0 auto;
-	}
 	#acoes .acoes-div1 p,
 	#acoes .acoes-div2 p,
 	#acoes .acoes-div3 p {
-		width: 90%;
+		width: 100%;
 		margin: 0 auto;
 		padding-bottom: 5%;
 	}
@@ -343,6 +301,7 @@ nav ul li {
 /*-----------------------Configurações do "footer" - Contato-----------------------*/
 
 #contato {
+	position: relative;
 	min-height: 100vh;
 	background-image: url("Assets/contato.JPG");
 	background-size: cover;
@@ -452,4 +411,33 @@ nav ul li {
 	#contato .contato-div1-sub1 {
 		width: 50%;
 	}
+}
+/*footer Vai na Web */
+
+.vnw{
+	width: 100%;
+    height: 40px;
+	background: #f16337;
+	position: absolute;
+	left: 0;
+	align-self: flex-end;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+}
+.vnw__text{
+    font-family: 'filson-soft', sans-serif;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+    color: #30368c !important;
+}
+.vnw__link{
+    color: #30368c !important;
+}
+@media (max-width: 768px){
+	.vnw__text{
+        font-size: 12px;
+    }
 }
