--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:500,700');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:500,700');
 
 /*Padrão estabelecido*/
 * {
@@ -408,6 +408,7 @@ nav a {
     color: #30368c !important;
 }
 .vnw__link{
+	color: #30368c !important;
 	font-weight: 700 !important;
 }
 @media (max-width: 768px){
